--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ av==16.1.0
 contourpy==1.3.3
 cycler==0.12.1
 einops==0.8.2
+fastapi==0.115.0
 flatbuffers==25.12.19
 fonttools==4.61.1
 h5py==3.15.1
@@ -35,4 +36,5 @@ setuptools==69.5.1
 six==1.17.0
 sympy==1.14.0
 typing_extensions==4.15.0
+uvicorn==0.30.0
 wheel==0.46.3
